adds gif to background

--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,7 @@
 }
 
 body {
-	background-image: url(logo.svg);
-	background-color: rgba(66, 65, 65, 0.829);
+	background-image: url(XdZGlu.gif);
 }
 
 h1 {
